--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
@@ -53,6 +52,11 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.14",
     "@types/diff": "^5.0.2",
-    "gh-pages": "^4.0.0"
+    "@types/node": "^18.11.11",
+    "gh-pages": "^4.0.0",
+    "https": "^1.0.0",
+    "https-agent": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "url": "^0.11.0"
   }
 }
